[package]
name = "rust-samples"
version = "0.1.0"
authors = ["Shishir Dey <shishirdey241097@gmail.com>"]

[[bin]]
name = "args"
test = false
bench = false
path = "src/args/args.rs"

[[bin]]
name = "array"
test = false
bench = false
path = "src/array/array.rs"

[[bin]]
name = "boxed"
test = false
bench = false
path = "src/boxed/boxed.rs"

[[bin]]
name = "call_by_ref"
test = false
bench = false
path = "src/call_by_ref/call_by_ref.rs"

[[bin]]
name = "clone_drop"
test = false
bench = false
path = "src/clone_drop/clone_drop.rs"

[[bin]]
name = "closure"
test = false
bench = false
path = "src/closure/closure.rs"

[[bin]]
name = "const"
test = false
bench = false
path = "src/const/const.rs"

[[bin]]
name = "custom_type"
test = false
bench = false
path = "src/custom_type/custom_type.rs"

[[bin]]
name = "datatype"
test = false
bench = false
path = "src/datatype/datatype.rs"

[[bin]]
name = "derive_debug"
test = false
bench = false
path = "src/derive_debug/derive_debug.rs"

[[bin]]
name = "enum"
test = false
bench = false
path = "src/enum/enum.rs"

[[bin]]
name = "for_loop"
test = false
bench = false
path = "src/for_loop/for_loop.rs"

[[bin]]
name = "generic_function"
test = false
bench = false
path = "src/generic_function/generic_function.rs"

[[bin]]
name = "generic_struct"
test = false
bench = false
path = "src/generic_struct/generic_struct.rs"

[[bin]]
name = "hashmap"
test = false
bench = false
path = "src/hashmap/hashmap.rs"

[[bin]]
name = "heap_alloc"
test = false
bench = false
path = "src/heap_alloc/heap_alloc.rs"

[[bin]]
name = "hello"
test = false
bench = false
path = "src/hello/hello.rs"

[[bin]]
name = "if-else"
test = false
bench = false
path = "src/if-else/if-else.rs"

[[bin]]
name = "iter"
test = false
bench = false
path = "src/iter/iter.rs"

[[bin]]
name = "label"
test = false
bench = false
path = "src/label/label.rs"

[[bin]]
name = "linked_list"
test = false
bench = false
path = "src/linked_list/linked_list.rs"

[[bin]]
name = "list"
test = false
bench = false
path = "src/list/list.rs"

[[bin]]
name = "loop"
test = false
bench = false
path = "src/loop/loop.rs"

[[bin]]
name = "match"
test = false
bench = false
path = "src/match/match.rs"

[[bin]]
name = "mod"
test = false
bench = false
path = "src/mod/mod.rs"

[[bin]]
name = "nested_struct"
test = false
bench = false
path = "src/nested_struct/nested_struct.rs"

[[bin]]
name = "number"
test = false
bench = false
path = "src/number/number.rs"

[[bin]]
name = "oop"
test = false
bench = false
path = "src/oop/oop.rs"

[[bin]]
name = "panicked"
test = false
bench = false
path = "src/panicked/panicked.rs"

[[bin]]
name = "parse"
test = false
bench = false
path = "src/parse/parse.rs"


[[bin]]
name = "pointer_loc"
test = false
bench = false
path = "src/pointer_loc/pointer_loc.rs"

[[bin]]
name = "slice"
test = false
bench = false
path = "src/slice/slice.rs"

[[bin]]
name = "some_res"
test = false
bench = false
path = "src/some_res/some_res.rs"

[[bin]]
name = "string"
test = false
bench = false
path = "src/string/string.rs"

[[bin]]
name = "struct"
test = false
bench = false
path = "src/struct/struct.rs"

[[bin]]
name = "thread"
test = false
bench = false
path = "src/thread/thread.rs"

[[bin]]
name = "tuple"
test = false
bench = false
path = "src/tuple/tuple.rs"

[[bin]]
name = "vector"
test = false
bench = false
path = "src/vector/vector.rs"

[[bin]]
name = "while_loop"
test = false
bench = false
path = "src/while_loop/while_loop.rs"
